I changed the background and text color, updated link

--- a/index.html
+++ b/index.html
@@ -4,53 +4,28 @@
 <h2><em>Why</em> should you buy one?</h2>
 </head>
 
-<body>
-    <h4>Most people think that motorcycles can be dangerous but most of the time it's cars that cause the death of motorcyclists. Others migth say it's dangerous and that you shouldn't buy one, who cares we only live once so if you want to buy a motorcycle then buy one. Most motorcycles are cheaper than a car unless you're getting a 987 C3 4V Vyrus or a Conventry Eagle. Beginner bikes are around 5,000-6,000 dollars which isn't that much but you <strong>must</strong> wear gear even if it's hot. You will meet pretty chill people who ride bikes and one of them might even become your best friend or lover. Buy what will make you happy even if it won't make others happy and if this is what will make you happy then get the bike.</h4>
+<body style="background:LightBlue">
+    <h4 style="color:white">Most people think that motorcycles can be dangerous but most of the time it's cars that cause the death of motorcyclists. Others migth say it's dangerous and that you shouldn't buy one, who cares we only live once so if you want to buy a motorcycle then buy one. Most motorcycles are cheaper than a car unless you're getting a 987 C3 4V Vyrus or a Conventry Eagle. Beginner bikes are around 5,000-6,000 dollars which isn't that much but you <strong>must</strong> wear gear even if it's hot. You will meet pretty chill people who ride bikes and one of them might even become your best friend or lover. Buy what will make you happy even if it won't make others happy and if this is what will make you happy then get the bike.</h4>
     <hr>
     <h2>What to get as a beginner:</h2>
     <ol>
         <li>Kawasaki Ninja 300</li>
-         <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Azadi_Motorcylce_Circuit_2019-08-10_05.jpg/800px-Azadi_Motorcylce_Circuit_2019-08-10_05.jpg?20190810135501
-        " width="300px" hieght="300px">
-        <br>
-        <em>source: Bahnam Tofighi. Azadi Motorcylce Circuit. 2019. Commons.wikimedia.org</em>
-        <br> 
-        <p>The Kawasaki Ninja 300 has smooth shifting and it is easy to control. You won't have to worry about stalling to much on this bike and you won't be jerked around as much when you <em>down shift.</em> It provides good stability and turning abilities and its suspension system keeps it grounded during highway rides. This bike can be used by anyone above 5 feet and it weighs 170 kg so you can carry its weight easily.</p>
-        <br>
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Azadi_Motorcylce_Circuit_2019-08-10_05.jpg/800px-Azadi_Motorcylce_Circuit_2019-08-10_05.jpg?20190810135501
+            " width="300px" hieght="300px">
+                <br>
+                    <em>source: Bahnam Tofighi. Azadi Motorcylce Circuit. 2019. </em> <a href="https://commons.wikimedia.org/wiki/File:Azadi_Motorcylce_Circuit_2019-08-10_05.jpg
+                    ">Wikimedia</a>
+                        <br> 
+                            <p>The Kawasaki Ninja 300 has smooth shifting and it is easy to control. You won't have to worry about stalling to much on this bike and you won't be jerked around as much when you <em>down shift.</em> It provides good stability and turning abilities and its suspension system keeps it grounded during highway rides. This bike can be used by anyone above 5 feet and it weighs 170 kg so you can carry its weight easily.</p>
+                                <br>
         <il>Kawasaki Ninja 400</il>
-        <br>
-        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4.jpg/800px-Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4.jpg?20131222030749
-        " width="300px" height="200px">
-        <br>
-        <em>Source: Dion Sukardiyono. Kawasaki Ninja Fi ABS. 2013. Commons.wikimedia.org      </em>
-        <br>
-        <p></p>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+            <br>
+                <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/34/Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4.jpg/800px-Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4.jpg?20131222030749
+                " width="300px" height="200px">
+                    <br>
+                        <em>Source: Dion Sukardiyono. Kawasaki Ninja Fi ABS. 2013.</em> <a href="https://commons.wikimedia.org/wiki/File:Kawasaki_Ninja_Fi_ABS_-_Candy_Burn_Orange.4.jpg">Wikimedia</a>  
+                             <br>
+                               <p style="color:rgb(150, 48, 197)">The Kawasaki Ninja 400 is easy to move around manually, it is also lightweight for people who can't pick up heavy things. if you are worried about not being able to learn on a bike and that it will be hard don't worry the Kawasaki Ninja 400 is easy to learn on. Not only is it easy to maintain it is also a very reliable sports bike to use as a beginner or even if you are an experienced rider.</p>
     </ol>
 </body>
 
